// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LicenseManagementRow allowed license renders the allowed status text with the status icon 1`] = `
<div
  class="table-mobile-content text-capitalize d-flex align-items-center justify-content-end justify-content-md-start status"
>
  <issue-status-icon-stub
    status="success"
    statusiconsize="24"
  />
  
        Allowed
      
</div>
`;

exports[`LicenseManagementRow allowed license renders the license name 1`] = `
<div
  class="table-mobile-content name"
>
  
        MIT
      
</div>
`;

exports[`LicenseManagementRow denied license renders the denied status text with the status icon 1`] = `
<div
  class="table-mobile-content text-capitalize d-flex align-items-center justify-content-end justify-content-md-start status"
>
  <issue-status-icon-stub
    status="failed"
    statusiconsize="24"
  />
  
        Denied
      
</div>
`;

exports[`LicenseManagementRow denied license renders the license name 1`] = `
<div
  class="table-mobile-content name"
>
  
        New BSD
      
</div>
`;
